--- a/Sandbox.csproj
+++ b/Sandbox.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FinancialDataGenerator.cs" />
+    <Compile Include="LeetcodeSandbox.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SudokuMatrixModel.cs" />
